workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__rfc__test__can_handle_end_batch_commit_command__unexisting_batch_result.snap
---
source: workspaces/optic-engine-native/src/commands/rfc.rs
expression: unexisting_batch_result.unwrap_err()
---
Validation(
    "Command failed validation: batch commit must exist to end batch commit, \"EndBatchCommit(EndBatchCommit { batch_id: \\\"not-a-batch\\\" })\"",
)
